--- a/docs/styles/extra.css
+++ b/docs/styles/extra.css
@@ -41,3 +41,18 @@ h3.tag.server::after{
 	font-weight: bold;
 	vertical-align: bottom;
 }
+
+
+
+
+span.nx {
+	color: #4e4e4e !important;
+}
+
+span.kt {
+	color: #3b78e7 !important;
+}
+
+span.s2 {
+
+}
