--- a/docs/styles/extra.css
+++ b/docs/styles/extra.css
@@ -56,3 +56,47 @@ span.kt {
 span.s2 {
 
 }
+
+
+
+.tabbed-set {
+	display: flex;
+	position: relative;
+	flex-wrap: wrap;
+  }
+  
+  .tabbed-set .highlight {
+	background: #eee;
+  }
+  
+  .tabbed-set .tabbed-content {
+	display: none;
+	order: 99;
+	width: 100%;
+  }
+  
+  .tabbed-set label {
+	width: auto;
+	margin: 0 0.5em;
+	padding: 0.25em;
+	font-size: 100%;
+	cursor: pointer;
+  }
+  
+  .tabbed-set input {
+	position: absolute;
+	opacity: 0;
+  }
+  
+  .tabbed-set input:nth-child(n+1) {
+	color: #333333;
+  }
+  
+  .tabbed-set input:nth-child(n+1):checked + label {
+	  color: #0094e8;
+	  border-bottom: #0094e8 1px solid;
+  }
+  
+  .tabbed-set input:nth-child(n+1):checked + label + .tabbed-content {
+	  display: block;
+  }
