--- a/docs/src/pages/styles.module.css
+++ b/docs/src/pages/styles.module.css
@@ -24,6 +24,11 @@
   justify-content: center;
 }
 
+.getStarted {
+  /* padding: 5px; */
+  margin: 5px;
+}
+
 .features {
   display: flex;
   align-items: center;
